# server/route/weddingRoute.go
@@ -11,9 +11,10 @@ func WeddingRoutes(router *gin.Engine) {
 	var weddingControllerPort controller_port.WeddingControllerInterface = &controller.WeddingController{}
 
 	router.GET("/weddings", weddingControllerPort.GetWeddings)
-	router.POST("/addwedding", weddingControllerPort.CreateWedding)
+	router.POST("/wedding", weddingControllerPort.CreateWedding)
 	router.GET("/wedding/:id", weddingControllerPort.GetWeddingByID)
+	router.GET("/userwedding/:id", weddingControllerPort.GetWeddingByUserID)
 	router.DELETE("/wedding/:id", weddingControllerPort.DeleteWeddingByID)
 	router.PATCH("/wedding/:id", weddingControllerPort.UpdateWedding)
-	router.POST("/wedding/:id/organizer", weddingControllerPort.AddWeddingOrganizer)
+
 }
